# yacht-game

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  yacht.sln
yacht/: CMakeLists.txt  dice.cpp  dice.h  game.cpp  game.h  interface.cpp  interface.h  main.cpp  main.h  player.cpp  player.h
yacht-client/: dice.cpp  dice.h  game.cpp  game.h  global.cpp  global.h  interface.cpp  interface.h  main.cpp  player.cpp  player.h  yacht-client.vcxproj  yacht-client.vcxproj.filters
yacht-server/: main.cpp  main.h  yacht-server.vcxproj
yacht_real/: dice.cpp  dice.h  game.cpp  global.cpp  global.h  interface.cpp  interface.h  main.cpp  main.h  player.cpp  player.h  yacht_real.vcxproj  yacht_real.vcxproj.filters
